# https://pip.pypa.io/en/stable/reference/build-system/pyproject-toml/
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trafilatura"
description = "Python & Command-line tool to gather text and metadata on the Web: Crawling, scraping, extraction, output as CSV, JSON, HTML, MD, TXT, XML."
readme = "README.md"
license = "Apache-2.0"
dynamic = ["version"]
requires-python = ">=3.10"
authors = [
  {name = "Adrien Barbaresi"}
]
keywords=[
    "corpus",
    "html2text",
    "news-crawler",
    "natural-language-processing",
    "scraper",
    "tei-xml",
    "text-extraction",
    "webscraping",
    "web-scraping",
]
classifiers = [
    # https://pypi.python.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 5 - Production/Stable",
    #'Development Status :: 6 - Mature',
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Security",
    "Topic :: Text Editors :: Text Processing",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Text Processing :: Markup :: XML",
    "Topic :: Utilities",
]
dependencies = [
    "certifi",
    "charset_normalizer >= 3.4.0",
    "courlan >= 1.4.0",
    "htmldate >= 1.10.0",
    "justext >= 3.0.2",
    "lxml >= 6.1.1",
    "urllib3 >= 1.26, < 3",
]

# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[tool.setuptools]
packages = ["trafilatura"]

# https://packaging.python.org/en/latest/guides/single-sourcing-package-version/
[tool.setuptools.dynamic]
version = {attr = "trafilatura.__version__"}

# https://setuptools.pypa.io/en/stable/userguide/datafiles.html
[tool.setuptools.package-data]
trafilatura = [
    "data/tei_corpus.dtd",
    "settings.cfg",
]

[project.scripts]
trafilatura = "trafilatura.cli:main"

[project.urls]
"Homepage" = "https://trafilatura.readthedocs.io"
"Source" = "https://github.com/adbar/trafilatura"
"Blog" = "https://adrien.barbaresi.eu/blog/tag/trafilatura.html"
"Tracker" = "https://github.com/adbar/trafilatura/issues"

# Development extras
[project.optional-dependencies]
dev = [
    "ruff >= 0.15",
    "mypy >= 2.1.0",
    "pytest >= 8.0",
    "pytest-cov >= 5.0",
    "types-lxml >= 2026.2.16",
    "types-pycurl >= 7.46.0.20260509",
    "types-urllib3 >= 1.26.25.14",
]
all = [
    "brotli",
    # maintained drop-in fork of the unmaintained cchardet (imports as "cchardet")
    "faust-cchardet >= 2.1.19",
    "htmldate[speed] >= 1.10.0",
    "py3langid >= 0.3.0",
    "pycurl >= 7.46.0",
    "urllib3[socks]",
    "zstandard >= 0.23.0",
]
# Benchmark dependencies for tests/evaluate.py. magic_html is git-only: install
# manually via "pip install git+https://github.com/opendatalab/magic-html".
eval = [
    "pandas",
    "tabulate",
    "tqdm",
    # alternative extractors compared in tests/evaluate.py
    "beautifulsoup4",
    "boilerpy3",
    "goose3",
    "html2text",
    "html-text",
    "inscriptis",
    "newspaper3k",
    "news-please",
    "readability-lxml",
    "resiliparse",
]
# Documentation build dependencies (see .readthedocs.yaml)
docs = [
    "sphinx >= 8.1",
    "pydata-sphinx-theme >= 0.18.0",
    "docutils >= 0.21",
    "sphinx-sitemap >= 2.9.0",
]

[tool.ruff]
line-length = 127
target-version = "py310"

[tool.mypy]
# pin the target so type-checking is deterministic across contributor machines
# and matches CI: check against the lowest supported version on Linux
python_version = "3.10"
platform = "linux"
packages = ["trafilatura"]
# explicit strictness — stable across mypy upgrades, unlike `strict = true`
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_reexport = true
disallow_untyped_defs = true

# third-party packages without type stubs (replaces per-import "# type: ignore")
[[tool.mypy.overrides]]
module = ["brotli", "py3langid", "cchardet", "justext.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = "tests/*test*.py"
